* The code underwent a major refactoring. It should be much clearer now * There's still a fatal bug somewhere. The random fetch goes down with a null-pointer exception. Gotta figure it out. Not tonight, though.